fix some visualisation issue on mobile

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -106,3 +106,11 @@ textarea:focus {
 .task_undone_symbol {
     color: red;
 }
+
+.todo_image {
+    max-width: 100%;
+}
+
+.user_email {
+    overflow-wrap: break-word;
+}
